--- a/site/components/0.html
+++ b/site/components/0.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.01.03 Электрорадиоизмерения и метрология</div>
+                            <div class="subjectName">Классный час</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Чобану Лариса Алексеевна</div>
+                                    <div class="subjectInfoPartDesc">Горлова Елена Владимировна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">1411</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,44 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./assets/imgs/group.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
-            <div class="scheduleSubjectItem">
-                        <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">3</div>
-                            <div class="subjectCounter-part2"></div>
-                        </div>
-                        <div class="subjectInfo">
-                            <div class="subjectName">МДК.01.03 Электрорадиоизмерения и метрология</div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./assets/imgs/teacher.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Чобану Лариса Алексеевна</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./assets/imgs/auditory.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">2411</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
