--- a/site/assets/styles/default.css
+++ b/site/assets/styles/default.css
@@ -65,6 +65,30 @@ html, body {
     transition-duration: 1s;
     transition-timing-function: cubic-bezier(.06,.93,0,.98);
     transition-property: padding;
+    .loadingScreen {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: #000;
+        z-index: 19;
+        transition: opacity .25s ease;
+        opacity: 1;
+        img[alt="logoMin"] {
+            width: 64px;
+            height: 64px;
+        }
+        img[alt="logoLoader"] {
+            position: absolute;
+            transform: scale(0.5);
+        }
+    }
     .warningScreen, .raspDownScreen {
         display: flex;
         justify-content: center;
@@ -81,6 +105,7 @@ html, body {
         transition: opacity .25s ease;
         box-sizing: border-box;
         padding: 30px;
+        pointer-events: none;
         .warnContentWrapper, .raspDownWrapper {
             display: flex;
             flex-direction: row;
@@ -137,6 +162,9 @@ html, body {
             }
         }
     }
+    .warningScreen {
+        z-index: 10 !important;
+    }
     .raspDownScreen {
         background-color: rgba(30 0 0 / 0.5);
     }
@@ -146,7 +174,8 @@ html, body {
         top: 10px;
         color: #363648;
         font-size: 0.5rem;
-        z-index: 10;
+        z-index: 20;
+        pointer-events: none;
     }
     .verticalLayoutWrapper {
         display: flex;
@@ -545,6 +574,7 @@ html, body {
         }
     }
 }
+
 @keyframes loaderSpin {
     0% {
         transform: rotate(0deg);
