--- a/site/private/components/404gl.html
+++ b/site/private/components/404gl.html
@@ -4,17 +4,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Доступ запрещен</title>
-    <link rel="stylesheet" href="/private/assets/styles/default.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/private/assets/imgs/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/private/assets/imgs/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/private/assets/imgs/favicon-16x16.png">
+    <link rel="stylesheet" href="../private/assets/styles/default.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../private/assets/imgs/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../private/assets/imgs/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../private/assets/imgs/favicon-16x16.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="appDiv">
         <div class="errorScreen">
-            <div class="errorCode">403</div>
-            <div class="errorDesc">Доступ запрещен</div>
+            <div class="errorCode">404</div>
+            <div class="errorDesc">Указанный объект не был найден</div>
             <a href="https://altrasp.ru">Вернуться на главную</a>
         </div>
     </div>
