--- a/site/private/assets/styles/app.css
+++ b/site/private/assets/styles/app.css
@@ -28,9 +28,25 @@ html, body {
         max-width: 550px;
         width: 100%;
         height: 100%;
-        img {
-            width: 128px;
+        .appCardHeader {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
             margin-bottom: 50px;
+            img {
+                width: 128px;
+            }
+            a {
+                margin-left: 8px;
+                transition: .2s ease;
+                color: #484899;
+                text-decoration: underline;
+                text-decoration-color: transparent;
+            }
+            a:hover {
+                text-decoration-color: #484899;
+            }
         }
         .mainHeader {
             font-size: 2.5rem;
