--- a/site/private/components/403.html
+++ b/site/private/components/403.html
@@ -15,7 +15,8 @@
         <div class="errorScreen">
             <div class="errorCode">403</div>
             <div class="errorDesc">Доступ запрещен</div>
-            <a href="https://altrasp.ru">Вернуться на главную</a>
+<!--            <a href="https://altrasp.ru">Вернуться на главную</a>-->
+            <a href="http://localhost:3000">Вернуться на главную</a>
         </div>
     </div>
 </body>
