--- a/site/private/components/1.html
+++ b/site/private/components/1.html
@@ -1,55 +1,18 @@
 
             <div class="scheduleSubjectItem">
                         <div class="subjectCounterSide">
-                            <div class="subjectCounter-part1">1</div>
-                            <div class="subjectCounter-part2"></div>
-                        </div>
-                        <div class="subjectInfo">
-                            <div class="subjectName">Физическaя культура</div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Мирошниченко Марина Сергеевна</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">УСК</div>
-                                </div>
-                            </div>
-                            <div class="subjectInfoPart">
-                                <div class="infoIcon">
-                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
-                                </div>
-                                <div class="infoText">
-                                    <div class="subjectInfoPartHeader">Подгруппа</div>
-                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                
-            <div class="scheduleSubjectItem">
-                        <div class="subjectCounterSide">
                             <div class="subjectCounter-part1">2</div>
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.02.01 Защита информации в информационно-телекоммуникационных системах и сетях с использованием программных и программно-аппаратных средств защиты</div>
+                            <div class="subjectName">МДК.01.03 Электрорадиоизмерения и метрология</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Внукова Наталья Владимировна</div>
+                                    <div class="subjectInfoPartDesc">Чобану Лариса Алексеевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3207</div>
+                                    <div class="subjectInfoPartDesc">2411</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">МДК.02.01 Защита информации в информационно-телекоммуникационных системах и сетях с использованием программных и программно-аппаратных средств защиты</div>
+                            <div class="subjectName">МДК.01.03 Электрорадиоизмерения и метрология</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Внукова Наталья Владимировна</div>
+                                    <div class="subjectInfoPartDesc">Чобану Лариса Алексеевна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -95,7 +58,44 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3207</div>
+                                    <div class="subjectInfoPartDesc">2411</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/group.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Подгруппа</div>
+                                    <div class="subjectInfoPartDesc" data-subject-group>нет информации</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+            <div class="scheduleSubjectItem">
+                        <div class="subjectCounterSide">
+                            <div class="subjectCounter-part1">4</div>
+                            <div class="subjectCounter-part2"></div>
+                        </div>
+                        <div class="subjectInfo">
+                            <div class="subjectName">МДК.01.03 Электрорадиоизмерения и метрология</div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/teacher.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Преподаватель</div>
+                                    <div class="subjectInfoPartDesc">Чобану Лариса Алексеевна</div>
+                                </div>
+                            </div>
+                            <div class="subjectInfoPart">
+                                <div class="infoIcon">
+                                    <img alt="teacher" src="./private/assets/imgs/auditory.svg">
+                                </div>
+                                <div class="infoText">
+                                    <div class="subjectInfoPartHeader">Аудитория</div>
+                                    <div class="subjectInfoPartDesc">2411</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
