Fix cyclesIndex to start from 1

--- a/site/private/components/00330/1.html
+++ b/site/private/components/00330/1.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Классный час</div>
+                            <div class="subjectName">Химия</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сапожникова Галина Васильевна</div>
+                                    <div class="subjectInfoPartDesc">Сорокина Галина Ивановна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3407</div>
+                                    <div class="subjectInfoPartDesc">1412</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,14 +42,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Математика</div>
+                            <div class="subjectName">Архитектура аппаратных средств</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сапожникова Галина Васильевна</div>
+                                    <div class="subjectInfoPartDesc">Сергеев Павел Евгеньевич</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">3407</div>
+                                    <div class="subjectInfoPartDesc">3301</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +79,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Информатика</div>
+                            <div class="subjectName">Русский язык</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Глухова Людмила Алексеевна</div>
+                                    <div class="subjectInfoPartDesc">Ночевка Екатерина Игоревна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">2212</div>
+                                    <div class="subjectInfoPartDesc">1307</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -116,14 +116,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Истoрия</div>
+                            <div class="subjectName">Литература</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Конобиевская Мария Ивановна</div>
+                                    <div class="subjectInfoPartDesc">Ночевка Екатерина Игоревна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -132,7 +132,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">1203</div>
+                                    <div class="subjectInfoPartDesc">1307</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
