--- a/site/private/components/00331/2.html
+++ b/site/private/components/00331/2.html
@@ -5,14 +5,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Обществознание</div>
+                            <div class="subjectName">Физика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Горлова Елена Владимировна</div>
+                                    <div class="subjectInfoPartDesc">Деревнина Оксана Владимировна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -21,7 +21,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">1403</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -42,7 +42,7 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Информатика</div>
+                            <div class="subjectName">Математика</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">2212</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -79,14 +79,14 @@
                             <div class="subjectCounter-part2"></div>
                         </div>
                         <div class="subjectInfo">
-                            <div class="subjectName">Архитектура аппаратных средств</div>
+                            <div class="subjectName">Информационные технологии</div>
                             <div class="subjectInfoPart">
                                 <div class="infoIcon">
                                     <img alt="teacher" src="./private/assets/imgs/teacher.svg">
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Преподаватель</div>
-                                    <div class="subjectInfoPartDesc">Сергеев Павел Евгеньевич</div>
+                                    <div class="subjectInfoPartDesc">Чутова Ангелина Владимировна</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="infoText">
                                     <div class="subjectInfoPartHeader">Аудитория</div>
-                                    <div class="subjectInfoPartDesc">дистант / не указано</div>
+                                    <div class="subjectInfoPartDesc">2409</div>
                                 </div>
                             </div>
                             <div class="subjectInfoPart">
